--- a/index.html
+++ b/index.html
@@ -1,12 +1,418 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>CAFÉ do AMANHÃ – Monte o café</title>
+  <style>
+    :root{
+      --bg:#0b0f1a;         /* fundo escuro azulado */
+      --card:#11182a;       /* cartões */
+      --soft:#1a2340;       /* destaque suave */
+      --brand:#5fe1b3;      /* cor de marca */
+      --ink:#e9eefc;        /* texto principal */
+      --muted:#a6b0cc;      /* texto secundário */
+      --danger:#ff6b6b;
+      --ok:#78e08f;
+      --radius:20px;
+      --shadow: 0 10px 30px rgba(0,0,0,.35);
+    }
+    *{box-sizing:border-box}
+    html,body{height:100%}
+    body{
+      margin:0; font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, "Helvetica Neue", Arial, "Apple Color Emoji","Segoe UI Emoji"; 
+      color:var(--ink); background:
+        radial-gradient(1200px 600px at 10% -10%, rgba(95,225,179,.08), transparent 60%),
+        radial-gradient(800px 500px at 90% 10%, rgba(95,225,179,.06), transparent 50%),
+        linear-gradient(180deg, #0b0f1a, #0b0f1a);
+      letter-spacing:.2px;
+    }
+
+    /* NAV */
+    .nav{
+      position:sticky; top:0; z-index:50; backdrop-filter: blur(8px);
+      background: rgba(11,15,26,.5); border-bottom:1px solid rgba(255,255,255,.06);
+    }
+    .nav-inner{max-width:1100px; margin:auto; display:flex; align-items:center; justify-content:space-between; padding:14px 18px}
+    .brand{display:flex; gap:10px; align-items:center; font-weight:800; letter-spacing:.5px}
+    .brand .logo{width:36px; height:36px; border-radius:10px; background:linear-gradient(135deg, var(--brand), #89f7e2); box-shadow:0 6px 18px rgba(95,225,179,.45)}
+    .brand span{color:var(--ink)}
+    .brand small{display:block; color:var(--muted); font-weight:500; font-size:12px; margin-top:-2px}
+    .nav a{color:var(--muted); text-decoration:none; margin-left:18px; font-weight:600}
+    .nav a:hover{color:var(--ink)}
+
+    /* HERO */
+    .hero{max-width:1100px; margin:32px auto 10px; padding:0 18px; display:grid; grid-template-columns:1.1fr .9fr; gap:22px}
+    .hero-t{
+      background:linear-gradient(180deg, rgba(17,24,42,.8), rgba(17,24,42,.6));
+      border:1px solid rgba(255,255,255,.06); border-radius:var(--radius);
+      padding:28px; box-shadow:var(--shadow)
+    }
+    .hero h1{margin:0; font-size:36px; line-height:1.1}
+    .hero h1 .em{color:var(--brand)}
+    .hero p{color:var(--muted); margin:12px 0 0}
+    .hero-steps{margin-top:16px; display:grid; gap:10px}
+    .chip{display:inline-flex; align-items:center; gap:8px; padding:8px 12px; border-radius:999px; background:var(--soft); border:1px solid rgba(255,255,255,.06); color:var(--ink); font-weight:600;}
+
+    .hero-i{
+      background: radial-gradient(400px 220px at 80% 20%, rgba(95,225,179,.15), transparent 60%), var(--card);
+      border-radius:var(--radius); border:1px solid rgba(255,255,255,.06);
+      padding:22px; box-shadow:var(--shadow); display:grid; align-content:center; justify-items:center; min-height:200px
+    }
+    .hero-i .img{width:100%; max-width:420px; aspect-ratio: 4/3; border-radius:14px; background:
+      linear-gradient(135deg, rgba(95,225,179,.25), rgba(95,225,179,.06)),
+      radial-gradient(120px 80px at 70% 20%, rgba(255,255,255,.06), transparent 60%),
+      linear-gradient(180deg, #0f1528, #0d1424);
+      border:1px solid rgba(255,255,255,.08);
+      display:grid; place-items:center; color:var(--muted); font-weight:700; letter-spacing:.6px
+    }
+
+    /* LAYOUT */
+    .wrap{max-width:1100px; margin:10px auto 60px; padding:0 18px; display:grid; grid-template-columns:1fr 1fr; gap:22px}
+
+    .card{background:var(--card); border:1px solid rgba(255,255,255,.06); border-radius:var(--radius); box-shadow:var(--shadow);}
+    .card h2{margin:0; padding:20px 22px; border-bottom:1px solid rgba(255,255,255,.06)}
+    .card .body{padding:16px 22px}
+
+    /* FORM LIST */
+    .item{display:grid; grid-template-columns:auto 1fr auto auto; gap:12px; align-items:center; padding:12px 0; border-bottom:1px dashed rgba(255,255,255,.06)}
+    .item:last-child{border-bottom:0}
+    .item label{font-weight:700}
+    .item small{color:var(--muted); font-weight:600}
+    .item input[type="number"], .item input[type="text"]{
+      width:110px; padding:8px 10px; border-radius:12px; border:1px solid rgba(255,255,255,.12);
+      background:#0f162a; color:var(--ink); font-weight:700; text-align:right
+    }
+    .item input[disabled]{opacity:.6}
+    .qty{display:inline-flex; align-items:center; border:1px solid rgba(255,255,255,.12); border-radius:12px; overflow:hidden}
+    .qty button{all:unset; padding:7px 10px; cursor:pointer; background:#0f162a; border-right:1px solid rgba(255,255,255,.06); user-select:none}
+    .qty button:last-child{border-right:0; border-left:1px solid rgba(255,255,255,.06)}
+    .qty input{width:64px; border:0; text-align:center; background:#0f162a}
+
+    .total{
+      display:flex; gap:12px; align-items:center; justify-content:space-between; margin-top:10px; padding:14px 16px; border-radius:14px; background:linear-gradient(180deg, #0e162b, #0c1324); border:1px solid rgba(255,255,255,.08)
+    }
+    .total .now{font-size:14px; color:var(--muted)}
+    .total .big{font-size:26px; font-weight:900}
+
+    /* FUTURO */
+    .row{display:flex; gap:12px; align-items:center; flex-wrap:wrap}
+    select, .rate{
+      padding:10px 12px; border-radius:12px; border:1px solid rgba(255,255,255,.12); background:#0f162a; color:var(--ink); font-weight:700
+    }
+    .scenarios{display:flex; gap:8px; flex-wrap:wrap; margin:8px 0 0}
+    .scenario{border:1px solid rgba(255,255,255,.12); background:#0f162a; padding:8px 10px; border-radius:12px; cursor:pointer; font-weight:800}
+    .scenario.active{outline:2px solid var(--brand)}
+
+    .cta{
+      margin-top:14px; display:flex; gap:10px; flex-wrap:wrap
+    }
+    .btn{
+      all:unset; cursor:pointer; padding:10px 14px; border-radius:12px; font-weight:800; letter-spacing:.3px; border:1px solid rgba(255,255,255,.12); background:#0f162a
+    }
+    .btn.brand{background:linear-gradient(135deg, var(--brand), #9ff7dc); color:#032d21}
+    .btn.ghost{color:var(--ink)}
+
+    /* FOOTER */
+    footer{max-width:1100px; margin:40px auto; padding:0 18px; color:var(--muted)}
+
+    /* RESPONSIVO */
+    @media (max-width: 940px){
+      .hero{grid-template-columns:1fr}
+      .wrap{grid-template-columns:1fr}
+    }
+  </style>
 </head>
 <body>
-    <h1>Tesyte</h1>
-    
+  <!-- NAV -->
+  <nav class="nav">
+    <div class="nav-inner">
+      <div class="brand">
+        <div class="logo" aria-hidden="true"></div>
+        <div>
+          <span>CAFÉ do AMANHÃ</span>
+          <small>Use a I.A no cotidiano</small>
+        </div>
+      </div>
+      <div class="links">
+        <a href="#entenda">Nossa proposta</a>
+        <a href="#monte">Monte o café</a>
+        <a href="#amanha">Café do amanhã</a>
+      </div>
+    </div>
+  </nav>
+
+  <!-- HERO / INTRO -->
+  <section class="hero" id="entenda">
+    <div class="hero-t">
+      <h1>Entenda como você pode montar o seu <span class="em">CAFÉ da MANHÃ</span></h1>
+      <div class="hero-steps">
+        <div class="chip">1) Liste os itens que deseja incluir</div>
+        <div class="chip">2) Veja o <strong>preço atual</strong> somando automaticamente</div>
+        <div class="chip">3) Projete o <strong>preço do seu café</strong> para o futuro</div>
+      </div>
+      <p style="margin-top:10px">Esta é uma versão independente do site original (Wix) usando apenas HTML, CSS e JavaScript puro.</p>
+    </div>
+    <div class="hero-i">
+      <div class="img">café • manhã • energia</div>
+    </div>
+  </section>
+
+  <!-- CONTEÚDO PRINCIPAL -->
+  <main class="wrap">
+    <!-- MONTE O CAFÉ -->
+    <section class="card" id="monte" aria-labelledby="h-monte">
+      <h2 id="h-monte">Monte o seu CAFÉ</h2>
+      <div class="body" id="items"></div>
+      <div class="body">
+        <div class="total" aria-live="polite">
+          <div>
+            <div class="now">Preço total atual</div>
+            <div class="big" id="totalNow">R$ 0,00</div>
+          </div>
+          <div class="cta">
+            <button class="btn ghost" id="clear">Limpar seleção</button>
+            <button class="btn brand" id="fakeGen">Gerar imagem</button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- VISIOne O AMANHÃ -->
+    <section class="card" id="amanha" aria-labelledby="h-amanha">
+      <h2 id="h-amanha">Visione o AMANHÃ</h2>
+      <div class="body">
+        <div class="row">
+          <label for="year">Selecione o ano</label>
+          <select id="year"></select>
+          <label for="rate">Inflação anual (%):</label>
+          <input id="rate" class="rate" type="number" min="0" step="0.1" value="4.5" />
+        </div>
+        <div class="scenarios" aria-label="Cenários rápidos">
+          <button class="scenario" data-rate="3">Conservador 3%</button>
+          <button class="scenario active" data-rate="4.5">IPCA médio 4,5%</button>
+          <button class="scenario" data-rate="7">Pessimista 7%</button>
+        </div>
+        <div class="total" style="margin-top:14px">
+          <div>
+            <div class="now">Preço do seu café (no ano escolhido)</div>
+            <div class="big" id="totalFuture">R$ 0,00</div>
+            <div class="now" id="yearsAhead">‑</div>
+          </div>
+          <div class="cta">
+            <button class="btn ghost" id="copyLink">Copiar link com seleção</button>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <div>© 2025 – Projeto independente. Este código é livre para uso e adaptação.</div>
+  </footer>
+
+  <script>
+    // ==========================
+    // Dados dos itens (edite à vontade)
+    // price: preço por unidade exibida em 'unit'
+    // step: passo do controle de quantidade
+    // ==========================
+    const CATALOG = [
+      { id: 'pao',     name: 'Pão (francês)', unit: 'unid',       price: 1.50, step: 1 },
+      { id: 'ovos',    name: 'Ovos (dúzia)',  unit: 'dúzia',      price: 12.00, step: 1 },
+      { id: 'frios',   name: 'Frios',         unit: '100 g',      price: 6.50, step: 1 },
+      { id: 'frutas',  name: 'Frutas da estação', unit: 'unid',   price: 3.00, step: 1 },
+      { id: 'manteiga',name: 'Manteiga/Margarina', unit: '100 g', price: 2.50, step: 1 },
+      { id: 'tapioca', name: 'Tapioca',       unit: 'porção',     price: 4.00, step: 1 },
+      { id: 'cereais', name: 'Cereais',       unit: 'porção',     price: 5.00, step: 1 },
+      { id: 'leite',   name: 'Leite',         unit: '1 L',        price: 5.50, step: 1 },
+      { id: 'cafe',    name: 'Café',          unit: 'porção',     price: 2.00, step: 1 },
+      { id: 'achoc',   name: 'Achocolatado',  unit: 'porção',     price: 2.50, step: 1 },
+    ];
+
+    // Utilidades
+    const BRL = new Intl.NumberFormat('pt-BR', { style:'currency', currency:'BRL' });
+    const $ = sel => document.querySelector(sel);
+    const $$ = sel => [...document.querySelectorAll(sel)];
+
+    // Estado
+    const state = {
+      items: {}, // {id: {enabled:boolean, qty:number, price:number}}
+      year: new Date().getFullYear(),
+      rate: 4.5
+    };
+
+    // Carregar do URL (para compartilhar estado)
+    function loadFromURL(){
+      const params = new URLSearchParams(location.search);
+      CATALOG.forEach(it=>{
+        const on = params.get(it.id+"_on");
+        const qty = params.get(it.id+"_q");
+        const prc = params.get(it.id+"_p");
+        state.items[it.id] = {
+          enabled: on === '1' || false,
+          qty: qty ? Number(qty) : 0,
+          price: prc ? Number(prc) : it.price
+        }
+      });
+      const yr = params.get('year');
+      const rt = params.get('rate');
+      if(yr) state.year = Number(yr);
+      if(rt) state.rate = Number(rt);
+    }
+
+    function saveToURL(){
+      const params = new URLSearchParams();
+      CATALOG.forEach(it=>{
+        const s = state.items[it.id] || {enabled:false, qty:0, price:it.price};
+        if(s.enabled) params.set(it.id+"_on", '1');
+        if(s.qty>0) params.set(it.id+"_q", String(s.qty));
+        if(s.price!==it.price) params.set(it.id+"_p", String(s.price));
+      });
+      params.set('year', String(state.year));
+      params.set('rate', String(state.rate));
+      history.replaceState(null, '', location.pathname + '?' + params.toString());
+    }
+
+    // Render de itens
+    function renderItems(){
+      const box = $('#items');
+      box.innerHTML = '';
+      CATALOG.forEach(it=>{
+        const s = state.items[it.id] ?? {enabled:false, qty:0, price:it.price};
+        const row = document.createElement('div');
+        row.className = 'item';
+        row.innerHTML = `
+          <input type="checkbox" id="chk-${it.id}" ${s.enabled? 'checked':''} aria-label="Usar ${it.name}" />
+          <label for="chk-${it.id}">${it.name}<br><small>${it.unit}</small></label>
+          <div class="qty">
+            <button aria-label="Diminuir" data-act="dec" data-id="${it.id}">–</button>
+            <input type="number" min="0" step="${it.step}" value="${s.qty}" id="qty-${it.id}" />
+            <button aria-label="Aumentar" data-act="inc" data-id="${it.id}">+</button>
+          </div>
+          <input type="number" min="0" step="0.01" value="${s.price.toFixed(2)}" id="prc-${it.id}" title="Preço por ${it.unit}" />
+        `;
+        box.appendChild(row);
+      });
+
+      // eventos por linha
+      CATALOG.forEach(it=>{
+        const chk = $(`#chk-${it.id}`);
+        const qty = $(`#qty-${it.id}`);
+        const prc = $(`#prc-${it.id}`);
+        const setDisabled = () => {
+          qty.disabled = !chk.checked;
+          prc.disabled = !chk.checked;
+        };
+        setDisabled();
+
+        chk.addEventListener('change', ()=>{
+          const s = state.items[it.id] || {qty:0, price:it.price};
+          s.enabled = chk.checked;
+          // Ao marcar e qty==0, inicia em 1
+          if(s.enabled && Number(qty.value) === 0) { qty.value = it.step; s.qty = it.step; }
+          state.items[it.id] = s; setDisabled(); calc(); saveToURL();
+        });
+        qty.addEventListener('input', ()=>{
+          const s = state.items[it.id] || {enabled:false, price:it.price};
+          s.qty = Number(qty.value) || 0; state.items[it.id] = s; calc(); saveToURL();
+        });
+        prc.addEventListener('input', ()=>{
+          const s = state.items[it.id] || {enabled:false, qty:0};
+          s.price = Number(prc.value) || 0; state.items[it.id] = s; calc(); saveToURL();
+        });
+      });
+
+      // botões de + / -
+      $$('#items .qty button').forEach(btn=>{
+        btn.addEventListener('click', ()=>{
+          const { act, id } = btn.dataset;
+          const input = $(`#qty-${id}`);
+          const step = Number(input.step) || 1;
+          let v = Number(input.value) || 0;
+          v = act==='inc' ? v + step : Math.max(0, v - step);
+          input.value = v;
+          const s = state.items[id] || {enabled:true, price: (CATALOG.find(i=>i.id===id)||{}).price||0};
+          s.enabled = true; s.qty = v; state.items[id] = s;
+          $(`#chk-${id}`).checked = true; // garantir marcado ao interagir
+          $(`#prc-${id}`).disabled = false; input.disabled = false;
+          calc(); saveToURL();
+        })
+      })
+    }
+
+    // Totalização
+    function calc(){
+      const now = CATALOG.reduce((sum, it)=>{
+        const s = state.items[it.id];
+        if(!s || !s.enabled) return sum;
+        return sum + (s.qty * s.price);
+      }, 0);
+      $('#totalNow').textContent = BRL.format(now);
+
+      // Futuro
+      const currentYear = new Date().getFullYear();
+      const years = Math.max(0, Number(state.year) - currentYear);
+      const rate = (Number(state.rate)||0)/100;
+      const future = now * Math.pow(1+rate, years);
+      $('#totalFuture').textContent = BRL.format(future);
+      $('#yearsAhead').textContent = years===0 ? 'Hoje' : `${years} ano(s) à frente`;
+    }
+
+    // Cenários rápidos
+    function setupScenarios(){
+      $$('.scenario').forEach(btn=>{
+        btn.addEventListener('click', ()=>{
+          $$('.scenario').forEach(b=>b.classList.remove('active'));
+          btn.classList.add('active');
+          const r = Number(btn.dataset.rate);
+          $('#rate').value = r.toString();
+          state.rate = r; calc(); saveToURL();
+        })
+      })
+    }
+
+    // Ano
+    function setupYear(){
+      const sel = $('#year');
+      const base = new Date().getFullYear();
+      for(let y=base; y<=base+10; y++){
+        const opt = document.createElement('option');
+        opt.value = String(y); opt.textContent = String(y);
+        sel.appendChild(opt);
+      }
+      sel.value = String(state.year || base);
+      sel.addEventListener('change', ()=>{ state.year = Number(sel.value); calc(); saveToURL(); })
+    }
+
+    // Ações extras
+    function setupActions(){
+      $('#clear').addEventListener('click', ()=>{
+        CATALOG.forEach(it=> state.items[it.id] = {enabled:false, qty:0, price:it.price});
+        renderItems(); calc(); saveToURL();
+      });
+      $('#fakeGen').addEventListener('click', ()=>{
+        alert('Este botão é apenas ilustrativo nesta versão estática.');
+      });
+      $('#rate').addEventListener('input', ()=>{ state.rate = Number($('#rate').value)||0; calc(); saveToURL(); })
+      $('#copyLink').addEventListener('click', async ()=>{
+        saveToURL();
+        try{ await navigator.clipboard.writeText(location.href); alert('Link copiado!'); }
+        catch{ alert('Não foi possível copiar. Copie manualmente a URL da barra do navegador.'); }
+      })
+    }
+
+    // Init
+    (function(){
+      // estado inicial
+      CATALOG.forEach(it=> state.items[it.id] = {enabled:false, qty:0, price:it.price});
+      loadFromURL();
+      renderItems();
+      setupScenarios();
+      setupYear();
+      setupActions();
+      calc();
+    })();
+  </script>
 </body>
 </html>
