--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     /* FUTURO */
     .row{display:flex; gap:12px; align-items:center; flex-wrap:wrap}
     select, .rate{
-      padding:10px 12px; border-radius:12px; border:1px solid rgba(255,255,255,.12); background:#0f162a; color:var(--ink); font-weight:700
+      padding:10px 12px; border-radius:12px; border:1px solid rgba(255,255,255,.12); background:#89f7e2; color:var(--ink); font-weight:700
     }
     .scenarios{display:flex; gap:8px; flex-wrap:wrap; margin:8px 0 0}
     .scenario{border:1px solid rgba(255,255,255,.12); background:#0f162a; padding:8px 10px; border-radius:12px; cursor:pointer; font-weight:800}
