--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
       { id: 'ovos',    name: 'Ovos (dúzia)',  unit: 'dúzia',      price: 12.00, step: 1 },
       { id: 'frios',   name: 'Frios',         unit: '100 g',      price: 6.50, step: 1 },
       { id: 'frutas',  name: 'Frutas da estação', unit: 'unid',   price: 3.00, step: 1 },
-      { id: 'manteiga',name: 'Manteiga/Margarina', unit: '100 g', price: 2.50, step: 1 },
+      { id: 'manteiga',name: 'Manteiga', unit: '100 g', price: 2.50, step: 1 },
       { id: 'tapioca', name: 'Tapioca',       unit: 'porção',     price: 4.00, step: 1 },
       { id: 'cereais', name: 'Cereais',       unit: 'porção',     price: 5.00, step: 1 },
       { id: 'leite',   name: 'Leite',         unit: '1 L',        price: 5.50, step: 1 },
